<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.adam.ptcma.EditCustomerActivity">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="368dp"
            android:layout_height="495dp"
            android:layout_marginTop="8dp"
            android:orientation="vertical"
            app:layout_constraintTop_toTopOf="parent"
            tools:layout_editor_absoluteX="8dp">

            <fragment
                android:id="@+id/fragment"
                android:name="com.example.adam.ptcma.current_user"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:layout="@layout/fragment_current_user"></fragment>

            <TextView
                android:id="@+id/editText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPersonName"
                android:text="@string/edit_customer_title" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <EditText
                        android:id="@+id/editText2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:inputType="textPersonName"
                        android:text="@string/edit_customer_name" />

                    <EditText
                        android:id="@+id/editText3"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:inputType="phone"
                        android:text="@string/edit_customer_phone" />

                    <EditText
                        android:id="@+id/editText4"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:inputType="textEmailAddress"
                        android:text="@string/edit_customer_email" />

                    <EditText
                        android:id="@+id/editText5"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:inputType="textPostalAddress"
                        android:text="@string/edit_customer_address" />

                </LinearLayout>

                <ImageButton
                    android:id="@+id/imageButton"
                    android:layout_width="150dp"
                    android:layout_height="150dp"
                    android:layout_weight="1"
                    app:srcCompat="@android:drawable/ic_menu_edit" />

            </LinearLayout>

            <Button
                android:id="@+id/button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Save" />

            </LinearLayout>

    </android.support.constraint.ConstraintLayout>
</android.support.constraint.ConstraintLayout>
